[VP] Created usermeta 'elementor_introduction'
VP-Action: usermeta/create/BB1C2F427C6F447F827F426632336753
VP-User-Id: CF95E6682D6A4818877C658C3F2040F9
VP-UserMeta-Key: elementor_introduction
VP-User-Login: BDD

X-VP-Version: 4.0-beta2
X-VP-Environment: default

--- a/wp-content/vpdb/users/CF/CF95E6682D6A4818877C658C3F2040F9.ini
+++ b/wp-content/vpdb/users/CF/CF95E6682D6A4818877C658C3F2040F9.ini
@@ -34,3 +34,5 @@ metaboxhidden_nav-menus#696B5AFABB1C4F4FB134AD1850F26E96[0] = "add-post_tag"
 metaboxhidden_nav-menus#696B5AFABB1C4F4FB134AD1850F26E96[1] = "add-post_format"
 <<table-prefix>>user-settings#BC18BAD681EE4872902D2EB5E77F25C2 = "libraryContent=browse"
 <<table-prefix>>user-settings-time#E3367A4F6C0248DC9FD19B1A7674C8EF = "1597831137"
+elementor_introduction#BB1C2F427C6F447F827F426632336753 = <<<serialized>>> <array>
+elementor_introduction#BB1C2F427C6F447F827F426632336753["colorPickerDropping"] = <boolean> true
