--- a/wp-content/vpdb/posts/EE/EE74E8BD9A3F4D9ABE2D6C05B5B2F5A7.ini
+++ b/wp-content/vpdb/posts/EE/EE74E8BD9A3F4D9ABE2D6C05B5B2F5A7.ini
@@ -11,8 +11,8 @@ post_password = ""
 post_name = "kit-par-defaut"
 to_ping = ""
 pinged = ""
-post_modified = "2020-08-18 17:39:50"
-post_modified_gmt = "2020-08-18 15:39:50"
+post_modified = "2020-08-19 13:11:50"
+post_modified_gmt = "2020-08-19 11:11:50"
 post_content_filtered = ""
 guid = "http://localhost/wpkin/?elementor_library=kit-par-defaut"
 menu_order = "0"
@@ -23,3 +23,7 @@ vp_post_parent = 0
 _elementor_edit_mode#322EFD9537EE46C49A4009D1D3E4A05B = "builder"
 _elementor_template_type#88B92133E9C144BCB4521C8D32C77321 = "kit"
 _elementor_version#5A4E86BF7EA74BFEA03667281EB69061 = "2.9.14"
+_wp_page_template#E79DB5CD3C3343238B115AF89E3CF750 = "default"
+_elementor_page_settings#20E725A016374C9C8D74E1301170B9A6 = <<<serialized>>> <array>
+_elementor_page_settings#20E725A016374C9C8D74E1301170B9A6["body_background_background"] = "classic"
+_elementor_data#839B2CB20F94448C80DB2472641E12F0 = "[]"
