[VP] Updated option 'action_scheduler_lock_async-request-runner'
VP-Action: option/update/action_scheduler_lock_async-request-runner

X-VP-Version: 4.0-beta2
X-VP-Environment: default

--- a/wp-content/vpdb/options/el/elementor_log.ini
+++ b/wp-content/vpdb/options/el/elementor_log.ini
@@ -66,4 +66,22 @@ option_value["f759ae20fc208c8a182125f7ed0f2b6d"]["*args"]["message"] = "Invalid 
 option_value["f759ae20fc208c8a182125f7ed0f2b6d"]["*args"]["file"] = "/opt/lampp/htdocs/wpkin/wp-content/plugins/elementor/includes/db.php"
 option_value["f759ae20fc208c8a182125f7ed0f2b6d"]["*args"]["line"] = 363
 option_value["f759ae20fc208c8a182125f7ed0f2b6d"]["*args"]["trace"] = <boolean> true
+option_value["850fbe15c1fd1fe921f9e85604ba572c"] = <Elementor\Core\Logger\Items\JS>
+option_value["850fbe15c1fd1fe921f9e85604ba572c"]["*column"] = "161513"
+option_value["850fbe15c1fd1fe921f9e85604ba572c"]["*file"] = "<<[site-url]>>/wp-content/plugins/elementor/assets/js/editor.min.js?ver=2.9.14"
+option_value["850fbe15c1fd1fe921f9e85604ba572c"]["*line"] = "31"
+option_value["850fbe15c1fd1fe921f9e85604ba572c"]["*date"] = "2020-08-19 11:12:27"
+option_value["850fbe15c1fd1fe921f9e85604ba572c"]["*type"] = "error"
+option_value["850fbe15c1fd1fe921f9e85604ba572c"]["*message"] = "Cannot read property \\&#039;isEditable\\&#039; of undefined"
+option_value["850fbe15c1fd1fe921f9e85604ba572c"]["*meta"] = <array>
+option_value["850fbe15c1fd1fe921f9e85604ba572c"]["*times"] = 1
+option_value["850fbe15c1fd1fe921f9e85604ba572c"]["*times_dates"] = <array>
+option_value["850fbe15c1fd1fe921f9e85604ba572c"]["*times_dates"][0] = "2020-08-19 11:12:27"
+option_value["850fbe15c1fd1fe921f9e85604ba572c"]["*args"] = <array>
+option_value["850fbe15c1fd1fe921f9e85604ba572c"]["*args"]["type"] = "error"
+option_value["850fbe15c1fd1fe921f9e85604ba572c"]["*args"]["timestamp"] = "1597835547"
+option_value["850fbe15c1fd1fe921f9e85604ba572c"]["*args"]["message"] = "Cannot read property \\'isEditable\\' of undefined"
+option_value["850fbe15c1fd1fe921f9e85604ba572c"]["*args"]["url"] = "<<[site-url]>>/wp-content/plugins/elementor/assets/js/editor.min.js?ver=2.9.14"
+option_value["850fbe15c1fd1fe921f9e85604ba572c"]["*args"]["line"] = "31"
+option_value["850fbe15c1fd1fe921f9e85604ba572c"]["*args"]["column"] = "161513"
 autoload = "no"
