[VP] Updated elementor_library 'Kit par défaut'
VP-Action: post/update/EE74E8BD9A3F4D9ABE2D6C05B5B2F5A7
VP-Post-Title: Kit par défaut
VP-Post-Type: elementor_library
VP-Post-Format: elementor_library

VP-Action: postmeta/update/20E725A016374C9C8D74E1301170B9A6
VP-Post-Id: EE74E8BD9A3F4D9ABE2D6C05B5B2F5A7
VP-PostMeta-Key: _elementor_page_settings
VP-Post-Type: elementor_library
VP-Post-Title: Kit par défaut

X-VP-Version: 4.0-beta2
X-VP-Environment: default

--- a/wp-content/vpdb/posts/EE/EE74E8BD9A3F4D9ABE2D6C05B5B2F5A7.ini
+++ b/wp-content/vpdb/posts/EE/EE74E8BD9A3F4D9ABE2D6C05B5B2F5A7.ini
@@ -11,8 +11,8 @@ post_password = ""
 post_name = "kit-par-defaut"
 to_ping = ""
 pinged = ""
-post_modified = "2020-08-19 13:11:50"
-post_modified_gmt = "2020-08-19 11:11:50"
+post_modified = "2020-08-19 13:14:22"
+post_modified_gmt = "2020-08-19 11:14:22"
 post_content_filtered = ""
 guid = "http://localhost/wpkin/?elementor_library=kit-par-defaut"
 menu_order = "0"
@@ -26,4 +26,7 @@ _elementor_version#5A4E86BF7EA74BFEA03667281EB69061 = "2.9.14"
 _wp_page_template#E79DB5CD3C3343238B115AF89E3CF750 = "default"
 _elementor_page_settings#20E725A016374C9C8D74E1301170B9A6 = <<<serialized>>> <array>
 _elementor_page_settings#20E725A016374C9C8D74E1301170B9A6["body_background_background"] = "classic"
+_elementor_page_settings#20E725A016374C9C8D74E1301170B9A6["body_background_image"] = <array>
+_elementor_page_settings#20E725A016374C9C8D74E1301170B9A6["body_background_image"]["url"] = "<<[site-url]>>/wp-content/uploads/2020/08/Vue_Kinshasa.jpg"
+_elementor_page_settings#20E725A016374C9C8D74E1301170B9A6["body_background_image"]["id"] = 55
 _elementor_data#839B2CB20F94448C80DB2472641E12F0 = "[]"
