[VP] Updated option 'elementor_log'
VP-Action: option/update/elementor_log

X-VP-Version: 4.0-beta2
X-VP-Environment: default

--- a/wp-content/vpdb/options/el/elementor_log.ini
+++ b/wp-content/vpdb/options/el/elementor_log.ini
@@ -84,4 +84,25 @@ option_value["850fbe15c1fd1fe921f9e85604ba572c"]["*args"]["message"] = "Cannot r
 option_value["850fbe15c1fd1fe921f9e85604ba572c"]["*args"]["url"] = "<<[site-url]>>/wp-content/plugins/elementor/assets/js/editor.min.js?ver=2.9.14"
 option_value["850fbe15c1fd1fe921f9e85604ba572c"]["*args"]["line"] = "31"
 option_value["850fbe15c1fd1fe921f9e85604ba572c"]["*args"]["column"] = "161513"
+option_value["2cc3fadf832176ee6086ee0cb2692535"] = <Elementor\Core\Logger\Items\PHP>
+option_value["2cc3fadf832176ee6086ee0cb2692535"]["*file"] = "/opt/lampp/htdocs/wpkin/wp-content/plugins/elementor/core/common/modules/ajax/module.php"
+option_value["2cc3fadf832176ee6086ee0cb2692535"]["*line"] = 171
+option_value["2cc3fadf832176ee6086ee0cb2692535"]["*date"] = "2020-08-19 13:18:21"
+option_value["2cc3fadf832176ee6086ee0cb2692535"]["*type"] = "notice"
+option_value["2cc3fadf832176ee6086ee0cb2692535"]["*message"] = "Undefined index: data"
+option_value["2cc3fadf832176ee6086ee0cb2692535"]["*meta"] = <array>
+option_value["2cc3fadf832176ee6086ee0cb2692535"]["*meta"]["trace"] = <array>
+option_value["2cc3fadf832176ee6086ee0cb2692535"]["*meta"]["trace"][0] = <array>
+option_value["2cc3fadf832176ee6086ee0cb2692535"]["*meta"]["trace"][0]["function"] = "shutdown"
+option_value["2cc3fadf832176ee6086ee0cb2692535"]["*meta"]["trace"][0]["class"] = "Elementor\\Core\\Logger\\Manager"
+option_value["2cc3fadf832176ee6086ee0cb2692535"]["*meta"]["trace"][0]["type"] = "->"
+option_value["2cc3fadf832176ee6086ee0cb2692535"]["*times"] = 1
+option_value["2cc3fadf832176ee6086ee0cb2692535"]["*times_dates"] = <array>
+option_value["2cc3fadf832176ee6086ee0cb2692535"]["*times_dates"][0] = "2020-08-19 13:18:21"
+option_value["2cc3fadf832176ee6086ee0cb2692535"]["*args"] = <array>
+option_value["2cc3fadf832176ee6086ee0cb2692535"]["*args"]["type"] = "notice"
+option_value["2cc3fadf832176ee6086ee0cb2692535"]["*args"]["message"] = "Undefined index: data"
+option_value["2cc3fadf832176ee6086ee0cb2692535"]["*args"]["file"] = "/opt/lampp/htdocs/wpkin/wp-content/plugins/elementor/core/common/modules/ajax/module.php"
+option_value["2cc3fadf832176ee6086ee0cb2692535"]["*args"]["line"] = 171
+option_value["2cc3fadf832176ee6086ee0cb2692535"]["*args"]["trace"] = <boolean> true
 autoload = "no"
