--- a/wp-content/vpdb/posts/EE/EE74E8BD9A3F4D9ABE2D6C05B5B2F5A7.ini
+++ b/wp-content/vpdb/posts/EE/EE74E8BD9A3F4D9ABE2D6C05B5B2F5A7.ini
@@ -11,8 +11,8 @@ post_password = ""
 post_name = "kit-par-defaut"
 to_ping = ""
 pinged = ""
-post_modified = "2020-08-19 13:14:22"
-post_modified_gmt = "2020-08-19 11:14:22"
+post_modified = "2020-08-19 13:21:02"
+post_modified_gmt = "2020-08-19 11:21:02"
 post_content_filtered = ""
 guid = "http://localhost/wpkin/?elementor_library=kit-par-defaut"
 menu_order = "0"
@@ -29,4 +29,5 @@ _elementor_page_settings#20E725A016374C9C8D74E1301170B9A6["body_background_backg
 _elementor_page_settings#20E725A016374C9C8D74E1301170B9A6["body_background_image"] = <array>
 _elementor_page_settings#20E725A016374C9C8D74E1301170B9A6["body_background_image"]["url"] = "<<[site-url]>>/wp-content/uploads/2020/08/Vue_Kinshasa.jpg"
 _elementor_page_settings#20E725A016374C9C8D74E1301170B9A6["body_background_image"]["id"] = 55
+_elementor_page_settings#20E725A016374C9C8D74E1301170B9A6["body_background_repeat"] = "repeat"
 _elementor_data#839B2CB20F94448C80DB2472641E12F0 = "[]"
