[VP] Updated option 'elementor_log'
VP-Action: option/update/elementor_log

X-VP-Version: 4.0-beta2
X-VP-Environment: default

--- a/wp-content/vpdb/options/el/elementor_log.ini
+++ b/wp-content/vpdb/options/el/elementor_log.ini
@@ -12,7 +12,7 @@ option_value["13297aebef0a19fe74a5e4fe2e839171"]["*meta"]["trace"][0] = <array>
 option_value["13297aebef0a19fe74a5e4fe2e839171"]["*meta"]["trace"][0]["function"] = "shutdown"
 option_value["13297aebef0a19fe74a5e4fe2e839171"]["*meta"]["trace"][0]["class"] = "Elementor\\Core\\Logger\\Manager"
 option_value["13297aebef0a19fe74a5e4fe2e839171"]["*meta"]["trace"][0]["type"] = "->"
-option_value["13297aebef0a19fe74a5e4fe2e839171"]["*times"] = 26
+option_value["13297aebef0a19fe74a5e4fe2e839171"]["*times"] = 27
 option_value["13297aebef0a19fe74a5e4fe2e839171"]["*times_dates"] = <array>
 option_value["13297aebef0a19fe74a5e4fe2e839171"]["*times_dates"][0] = "2020-08-18 17:39:57"
 option_value["13297aebef0a19fe74a5e4fe2e839171"]["*times_dates"][1] = "2020-08-18 17:40:24"
@@ -40,6 +40,7 @@ option_value["13297aebef0a19fe74a5e4fe2e839171"]["*times_dates"][22] = "2020-08-
 option_value["13297aebef0a19fe74a5e4fe2e839171"]["*times_dates"][23] = "2020-08-19 12:39:08"
 option_value["13297aebef0a19fe74a5e4fe2e839171"]["*times_dates"][24] = "2020-08-19 14:20:10"
 option_value["13297aebef0a19fe74a5e4fe2e839171"]["*times_dates"][25] = "2020-08-19 14:23:19"
+option_value["13297aebef0a19fe74a5e4fe2e839171"]["*times_dates"][26] = "2020-08-19 14:23:50"
 option_value["13297aebef0a19fe74a5e4fe2e839171"]["*args"] = <array>
 option_value["13297aebef0a19fe74a5e4fe2e839171"]["*args"]["type"] = "notice"
 option_value["13297aebef0a19fe74a5e4fe2e839171"]["*args"]["message"] = "Trying to access array offset on value of type null"
