[VP] Updated option 'elementor_log'
VP-Action: option/update/elementor_log

X-VP-Version: 4.0-beta2
X-VP-Environment: default

--- a/wp-content/vpdb/options/el/elementor_log.ini
+++ b/wp-content/vpdb/options/el/elementor_log.ini
@@ -60,10 +60,11 @@ option_value["f759ae20fc208c8a182125f7ed0f2b6d"]["*meta"]["trace"][0] = <array>
 option_value["f759ae20fc208c8a182125f7ed0f2b6d"]["*meta"]["trace"][0]["function"] = "shutdown"
 option_value["f759ae20fc208c8a182125f7ed0f2b6d"]["*meta"]["trace"][0]["class"] = "Elementor\\Core\\Logger\\Manager"
 option_value["f759ae20fc208c8a182125f7ed0f2b6d"]["*meta"]["trace"][0]["type"] = "->"
-option_value["f759ae20fc208c8a182125f7ed0f2b6d"]["*times"] = 2
+option_value["f759ae20fc208c8a182125f7ed0f2b6d"]["*times"] = 3
 option_value["f759ae20fc208c8a182125f7ed0f2b6d"]["*times_dates"] = <array>
 option_value["f759ae20fc208c8a182125f7ed0f2b6d"]["*times_dates"][0] = "2020-08-18 18:25:22"
 option_value["f759ae20fc208c8a182125f7ed0f2b6d"]["*times_dates"][1] = "2020-08-19 12:41:43"
+option_value["f759ae20fc208c8a182125f7ed0f2b6d"]["*times_dates"][2] = "2020-08-19 17:01:37"
 option_value["f759ae20fc208c8a182125f7ed0f2b6d"]["*args"] = <array>
 option_value["f759ae20fc208c8a182125f7ed0f2b6d"]["*args"]["type"] = "warning"
 option_value["f759ae20fc208c8a182125f7ed0f2b6d"]["*args"]["message"] = "Invalid argument supplied for foreach()"
