--- a/wp-content/vpdb/users/CF/CF95E6682D6A4818877C658C3F2040F9.ini
+++ b/wp-content/vpdb/users/CF/CF95E6682D6A4818877C658C3F2040F9.ini
@@ -36,3 +36,4 @@ metaboxhidden_nav-menus#696B5AFABB1C4F4FB134AD1850F26E96[1] = "add-post_format"
 <<table-prefix>>user-settings-time#E3367A4F6C0248DC9FD19B1A7674C8EF = "1597831137"
 elementor_introduction#BB1C2F427C6F447F827F426632336753 = <<<serialized>>> <array>
 elementor_introduction#BB1C2F427C6F447F827F426632336753["colorPickerDropping"] = <boolean> true
+elementor_introduction#BB1C2F427C6F447F827F426632336753["rightClick"] = <boolean> true
